--- a/web/templates/albums.html
+++ b/web/templates/albums.html
@@ -23,6 +23,7 @@
             height: 281px!important;
             height: 291px;
             overflow: hidden;
+            max-width: 150px;
         }
         body{
             font-size: 13px;
