--- a/web/static/style.css
+++ b/web/static/style.css
@@ -2,8 +2,8 @@
 @author xavierskip@gmial.com
 @link http://xavierskip.com
 @update 2014-01-19
-        __                      
-      /\ \  __    __            
+        _                      
+      /\ \  __    _            
   ____\ \ \/  \ /\_\    _____   
  /',__\\ \ ,  < \/\ \ /\ '__`\ 
 /\__, `\\ \ \ \`\\ \ \\ \ \L\ \
@@ -29,13 +29,14 @@ header {
 }
 footer {
     font-size: 13px;
-    width: 1024px;
+    width: 960px;
     margin: auto;
     text-align: right;
     line-height: 30px;
     padding: 2px 7px;
 }
 p, ul, ol, li{ margin: 0 auto;padding: 0;}
+ul,li{list-style: none;}
 a { text-decoration: none; }
 input:focus {
     outline: none;
@@ -54,6 +55,14 @@ textarea:focus {
     background: #fff;
     margin-right: auto;
     margin-left: auto;
+    position: relative;
+}
+#userinfo {
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    margin: 30px;
+    color: #646464;
 }
 #wrap{
     padding: 30px 20px;
@@ -67,16 +76,21 @@ textarea:focus {
     padding: 5px 5px;
     border: 2px solid #ccc;
     height: 21px;
-    text-indent: 6px;
+    text-indent: 4px;
     border-radius: 2px;
     transition: border .25s linear, color .25s linear;
 }
 #console input:focus{
     border-color: #e74c3c;
 }
+#console .tips {
+    margin: 10px 0px 0px 0px;
+    font-size: 13px;
+    opacity: 0.7;
+}
 #load {
-    visibility:hidden;
-    display: inline;
+    display: none;
+    margin-top: 10px;
 }
 #load p{
     display: inline-block;
@@ -88,30 +102,49 @@ textarea:focus {
 #albuminfo {
     margin: 0 10px;
     padding: 5px;
+    max-width: 300px;
+    max-height: 300px;
 }
 #albuminfo article{
     border: 1px dashed #ccc;
-    width: 200px;
-    min-height:200px; height:auto!important; height:200px;
+    min-width: 200px;
+    min-height:200px;
+    height:auto!important;
     margin: 5px;
     padding: 5px;
 }
-#links{
-    position: relative;
-    top: -39px;
-    left: 1px;
-    float: right;
-    height: 40px;
-    width: 80px;
-    box-shadow: inset 3px 2px 4px #8B8B8B;
-    background-color: #F1F1F1;
-    border-top: 1px dashed #ccc;
+#link1 {
+    position: absolute;
+    right: -1px;
+    bottom: -1px;
+    background-color: #F7F7F7;
+}
+#link2 {
+    position: absolute;
+    right: 89px;
+    bottom: -1px;
     border-left: 1px dashed #ccc;
+    background-color: #FDFDFD;
+
 }
-#links p{
+#loginModel {
+    display: none;
+    border: 1px solid #d9d9d9;
+    background-color: #fff;
+    color: #000;
+    box-shadow: 0 3px 7px rgba(0,0,0,0.3);
+}
+.links{
+    height: 40px;
+    box-shadow: inset 3px 2px 4px #8B8B8B;
+    border-top: 1px dashed #ccc;
+    display: inline-block;
+}
+.links p{
     margin: 13px 0;
+    display: inline-block;
 }
-#links a{
+.links a{
     padding: 13px;
     height: 40px;
     font-weight: bold;
@@ -119,9 +152,9 @@ textarea:focus {
     text-shadow: 1px 1px 2px #4E4E4E;
 
 }
-#links a:hover{
-    background-color:;
-    border-bottom:0;
+.links a:hover{
+/*    background-color:;
+    border-bottom:0;*/
 }
 .left ,.right{
     display: inline-table;
@@ -138,13 +171,22 @@ textarea:focus {
     cursor: pointer;
     transition: 0.25s;
 }
-.btn:focus,.btn:active {
-    box-shadow: 2px 1px 2px rgb(168, 62, 53) inset;
+.btn:active {
+    box-shadow: 3px 3px 2px rgb(168, 62, 53) inset;
     outline: none;
-    transition: 0.25s;
+    transition: 0.2s;
+    outline: none;
 }
 .urltext {
     background-color: rgb(245, 245, 245);
+    max-width: 550px;
+    background-image: none;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
+    -webkit-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
 }
 .loading {
     width: 3px; height:3px;
@@ -184,4 +226,25 @@ textarea:focus {
     color: #fff;
     background-color: #E74C3C;
     border: none;
+}
+.fix {
+    z-index: 1050;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    width: 200px;
+    height: 50px;
+    padding: 20px 20px 70px 20px;
+    margin: -121px -71px;
+}
+
+.avatar img{
+    height: 42px;
+    border: 2px solid white;
+    transition: border-color 0.3s !important;
+    border-radius: 50%;
+    box-sizing: border-box;
+}
+.avatar:hover img {
+border-color: #7CA2E5;
 }
