--- a/web/templates/logon.html
+++ b/web/templates/logon.html
@@ -13,16 +13,33 @@
 </head>
 <body>
     <div id="body">
+        <div id="userinfo" class="dropdown">
+            <a class="avatar" data-toggle="dropdown" href="#">
+                <img src="{{ user.avatar }}" title="{{ user.name }}" alt="{{ user.name }}">
+            </a>
+            <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+                <li>{{ user.name }}</li>
+                <li><a href="/logout">退出</a></li>
+            </ul>
+        </div>
+        <div >
+            <a href="javascript:void(0)" id="infobar"></a>
+        </div>
         <div id="wrap">
             <header>相册图片抓取器</header>
             <div id="console">
-                <label>相册URL: <input type="text" name="albumurl" size=50></label>
-                <button id="crawl" class="btn">抓取</button>
+                <div>
+                    <label>
+                        <input type="text" name="albumurl" placeholder="相册URL">
+                        <input type="text" name="username" placeholder="username">
+                        <input type="password" name="password" placeholder="password">
+                    </label>
+                    <button id="crawl" class="btn">抓取</button>
+                </div>
                 <div id="load">
                     <p class="loading spin"></p>
                     <p>正在抓取，请稍等～～</p>
                 </div>
-                    <p class="tips">like this:<a class="a" class="a" href="http://my.hupu.com/sunyatsen/photo/a135716.html" target="blank">http://my.hupu.com/sunyatsen/photo/a135716.html</a></p>
             </div>
             <div id="data" class="left">
                 <form>
@@ -46,21 +63,10 @@
                 <a href="{{ url_for('albums') }}">抓取历史</a>
             </p>
         </div>
-        <div id="link2" class='links'>
-            <p>
-                <a href="#login-model">登陆抓取</a>
-            </p>
-        </div>
     </div>
     <footer>
-        如果本工具对您有帮助，希望您能够<a  class="a" href="{{ url_for('donate') }}">捐助</a>此工具| last update {{ lastDate }} | <a class="a" href="mailto:xavierskip@gmail.com?Subject=BUG:" target="_blank">反馈</a>
+        powered by <a  class="a" href="http://developer.baidu.com/bae">bae</a> & <a class="a" href="http://flask.pocoo.org/">flask</a> | last update {{ lastDate }} | <a class="a" href="mailto:xavierskip@gmail.com?Subject=BUG:" target="_blank">反馈</a>
     </footer>
-    <div id="loginModel" class="fix">
-        <span class="title">登陆方式</span>
-        <div id="wb_connect_btn" >
-            <a href="{{ url_for('oauth') }}"><img src="static/img/sina.png"></a>
-        </div>
-    </div>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
