--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -41,19 +41,22 @@
                 </article>
             </div>
         </div>
-        <div id="link1" class='links'>
-            <p>
-                <a href="{{ url_for('albums') }}">抓取历史</a>
-            </p>
-        </div>
-        <div id="link2" class='links'>
-            <p>
-                <a href="#login-model">登陆抓取</a>
-            </p>
+        <div class="tabs">
+            <div id="link1" class='links'>
+                <p>
+                    <a href="{{ url_for('albums') }}">抓取历史</a>
+                </p>
+            </div>
+            <div id="link2" class='links'>
+                <p>
+                    <a href="#login-model">登陆抓取</a>
+                </p>
+            </div>
+            <span class="clear"></span>
         </div>
     </div>
     <footer>
-        如果本工具对您有帮助，希望您能够<a  class="a" href="{{ url_for('donate') }}">捐助</a>此工具| last update {{ lastDate }} | <a class="a" href="mailto:xavierskip@gmail.com?Subject=BUG:" target="_blank">反馈</a>
+        如果本工具对您有帮助，希望您能够<a  class="a" href="{{ url_for('donate') }}">捐助</a>此工具| Last updated {{ lastDate }} | <a class="a" href="mailto:xavierskip@gmail.com?Subject=BUG:" target="_blank">反馈</a>
     </footer>
     <div id="loginModel" class="fix">
         <span class="title">登陆方式</span>
